fix pop-up, link files

--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home Page</title>
   <link rel="stylesheet" href = "style.css">
+  <link rel="stylesheet" href = "signup.css">
+  <!-- <script src="App.js"></script> -->
   
 
 </head>
@@ -40,7 +42,7 @@
      <!-- creating the registration from -->
 		 <form id='register' class='input-group-register'>
 		     <input type='text'class='input-field'placeholder='First Name' required>
-		     <input type='text'class='input-field'placeholder='Last Name ' required>
+		     <input type='text'class='input-field'placeholder='Last Name' required>
 		     <input type='email'class='input-field'placeholder='Email Id' required>
 		     <input type='password'class='input-field'placeholder='Enter Password' required>
 		     <input type='password'class='input-field'placeholder='Confirm Password'  required>
@@ -57,6 +59,7 @@
 			x.style.left='-400px';
 			y.style.left='50px';
 			z.style.left='110px';
+      
 		}
 		function login()
 		{
