update home page and css

--- a/index.html
+++ b/index.html
@@ -10,22 +10,30 @@
 
 </head>
 <body>
+
+  <!-- Navbar -->
   <header>
     <!-- <img class="logo" src ="./img/logo.png" alt=" logo"> -->
-    <a href="logo"> Restaurant name</a>
+    <a href="index.html"> ICELAND ICE CREAM</a>
     <nav>
       <ul class= "nav_links">
-        <li><a href="#"> Home</a></li>
+        <li><a href="index.html"> Home</a></li>
         <li><a href="#"> Menu</a></li>
         <li><a href="#"> About Us</a></li>
         <li><a href="#"> Contact</a></li>
       </ul>
     </nav>
-    <a href="signup.html"><button class='signupbtn'onclick="document.getElementById('login-form').style.display='block'" style="width: auto;">Sign up</button></a>
+    <a class="signupbtn" href="signup.html">Sign up</a>
   </header>
-  
 
-  
+  <!-- Home page -->
+   <section class="home" id="home">
+    <div class="content">
+      <h3>ICELAND ICE CREAM</h3>
+      <span>Make your day great with a sweet treat!<br></span>
+      <a href="#" class="btn">Book Catering</a>
+    </div>
+   </section>
   
 </body>
 </html>
