--- a/signup.html
+++ b/signup.html
@@ -13,18 +13,20 @@
 <body>
   <header>
     <!-- <img class="logo" src ="./img/logo.png" alt=" logo"> -->
-    <a href="logo"> Restaurant name</a>
+    <a href="index.html"> ICELAND ICE CREAM</a>
     <nav>
       <ul class= "nav_links">
-        <li><a href="#"> Home</a></li>
+        <li><a href="index.html"> Home</a></li>
         <li><a href="#"> Menu</a></li>
         <li><a href="#"> About Us</a></li>
         <li><a href="#"> Contact</a></li>
       </ul>
     </nav>
-    <a><button class='signupbtn'onclick="document.getElementById('login-form').style.display='block'" style="width: auto;">Sign up</button></a>
+    <button class='signupbtn'onclick="document.getElementById('login-form').style.display='block'" style="width: auto;">Sign up</button>
   </header>
   
+
+  <!-- Login pop up -->
     <div id='login-form' class='login-page'>
       <div class="form-box">
                 <div class='button-box'>
