--- a/signup.html
+++ b/signup.html
@@ -6,10 +6,11 @@
   <title>Home Page</title>
   <link rel="stylesheet" href = "style.css">
   <link rel="stylesheet" href = "signup.css">
-  <!-- <script src="App.js"></script> -->
+  <script src="App.js" defer></script>
   
 
 </head>
+
 <body>
   <header>
     <!-- <img class="logo" src ="./img/logo.png" alt=" logo"> -->
@@ -25,8 +26,6 @@
     <button class='signupbtn'onclick="document.getElementById('login-form').style.display='block'" style="width: auto;">Sign up</button>
   </header>
   
-
-  <!-- Login pop up -->
     <div id='login-form' class='login-page'>
       <div class="form-box">
                 <div class='button-box'>
@@ -35,23 +34,38 @@
                     <button type='button'onclick='register()'class='toggle-btn'>Register</button>
                 </div>
                 <!-- creating login form -->
-                <form id='login' class='input-group-login'>
-                    <input type='text'class='input-field'placeholder='Email Id' required >
-		    <input type='password'class='input-field'placeholder='Enter Password' required>
+                <form id='login' class='input-group-login' onsubmit="handleLogin(event)">
+                    <input type='email'name='loginEmail' class='input-field'placeholder='Email Id' required >
+		    <input type='password' name='loginPassword' class='input-field'placeholder='Enter Password' required>
 		    <input type='checkbox'class='check-box'><span>Remember Password</span>
 		    <button type='submit'class='submit-btn'>Log in</button>
 		 </form>
      <!-- creating the registration from -->
-		 <form id='register' class='input-group-register'>
-		     <input type='text'class='input-field'placeholder='First Name' required>
-		     <input type='text'class='input-field'placeholder='Last Name' required>
-		     <input type='email'class='input-field'placeholder='Email Id' required>
-		     <input type='password'class='input-field'placeholder='Enter Password' required>
-		     <input type='password'class='input-field'placeholder='Confirm Password'  required>
-		     <input type='checkbox'class='check-box'><span>I agree to the terms and                                                   conditions</span>
+		 <form id='register' class='input-group-register' onsubmit="handleRegister(event)">
+		     <input type='text' name='firstName'class='input-field'placeholder='First Name' required>
+		     <input type='text'name='lastName'class='input-field'placeholder='Last Name' required>
+		     <input type='email'name='email'class='input-field'placeholder='Email Id' required>
+		     <input type='password' name='password'class='input-field'placeholder='Enter Password' required>
+		     <input type='password'name='confirmPassword'class='input-field'placeholder='Confirm Password'  required>
+		     <input type='checkbox'class='check-box' required><span>I agree to the terms and                                                   conditions</span>
                     <button type='submit'class='submit-btn'>Register</button>
 	         </form>
     </div>
+
+<!-- Error Message -->
+<div id="errorMessage" style="display: none; color: red; text-align: center; margin-top: 10px;"></div>
+
+<!-- Success Modal -->
+<div id="successModal" style="display: none; position: fixed; top: 0; left: 0; 
+  width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); 
+  justify-content: center; align-items: center; z-index: 1000;">
+  <div style="background: white; padding: 20px; text-align: center;">
+    <h2 id="successTitle"></h2>
+    <p id="successMessage"></p>
+    <button onclick="closeSuccessModal()">Close</button>
+  </div>
+</div>
+
     <script>
         var x=document.getElementById('login');
 		var y=document.getElementById('register');
