--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
     <nav>
       <ul class= "nav_links">
         <li><a href="index.html"> Home</a></li>
-        <li><a href="#"> Menu</a></li>
+        <li><a href="menu.html"> Menu</a></li>
         <li><a href="#"> About Us</a></li>
         <li><a href="#"> Contact</a></li>
       </ul>
