add logo update link - Tista

--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,10 @@
   </head>
   <body>
     <header>
-      <a href="index.html"> ICELAND ICE CREAM</a>
+      <a href="index.html" class="logo-link">
+        <img class="logo" src="./img/LOGO.png" alt="Logo">
+        <span>ICELAND ICE CREAM</span>
+      </a>
       <nav>
         <ul class="nav_links">
           <li><a href="index.html"> Home</a></li>
