--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
 
   <!-- Navbar -->
   <header>
-    <!-- <img class="logo" src ="./img/logo.png" alt=" logo"> -->
-    <a href="index.html"> ICELAND ICE CREAM</a>
+    <a href="index.html" class="logo-link">
+      <img class="logo" src="./img/LOGO.png" alt="Logo">
+      <span>ICELAND ICE CREAM</span>
+    </a>
     <nav>
-      <ul class= "nav_links">
-        <li><a href="index.html"> Home</a></li>
-  <li><a href="menu.html"> Menu</a></li>
-        <li><a href="#"> About Us</a></li>
-        <li><a href="#"> Contact</a></li>
+      <ul class="nav_links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
     <a class="signupbtn" href="signup.html">Sign up</a>
   </header>
+  
 
   <!-- Home page -->
    <section class="home" id="home">
