--- a/menu.html
+++ b/menu.html
@@ -37,84 +37,154 @@
       <h1 style="color:#3b1c13; margin-bottom:1rem;">Our Menu</h1>
       <section class="menu-grid" id="menuGrid">
 
-        <article class="menu-item" data-id="item1" data-name="#1 Original Vanilla">
-          <h3>#1 Original Vanilla — Banana & Nutella</h3>
-          <p class="desc">Base: Original Vanilla. Mix: Banana and Nutella. Toppings: Fruit Loops, Banana & Strawberry.</p>
-          <p class="price">small: $5.25 • regular: $7.25</p>
-          <button class="add-cart size-btn" data-id="item1" data-name="#1 Original Vanilla" data-size="small" data-price="5.25">Add small</button>
-          <button class="add-cart size-btn" data-id="item1" data-name="#1 Original Vanilla" data-size="regular" data-price="7.25">Add regular</button>
+        <article class="menu-card" data-id="item1" data-name="#1 Original Vanilla">
+          <div class="thumb" style="background-image:url('img/1.jpg')" aria-hidden="true"></div>
+          <div class="content">
+            <h3>#1 Original Vanilla — Banana & Nutella</h3>
+            <p class="desc">Base: Original Vanilla. Mix: Banana and Nutella. Toppings: Fruit Loops, Banana & Strawberry.</p>
+            <div class="footer">
+              <div class="price">small: $5.25 • regular: $7.25</div>
+              <div class="sizes">
+                <button class="add-cart" data-id="item1" data-name="#1 Original Vanilla" data-size="small" data-price="5.25">Add small</button>
+                <button class="add-cart" data-id="item1" data-name="#1 Original Vanilla" data-size="regular" data-price="7.25">Add regular</button>
+              </div>
+            </div>
+          </div>
         </article>
 
-        <article class="menu-item" data-id="item2" data-name="#2 Original Vanilla">
-          <h3>#2 Original Vanilla — Fruity Pebbles</h3>
-          <p class="desc">Base: Original Vanilla. Mix: Fruity Pebbles. Toppings: Whip Cream, Sprinkles & Sour Punch.</p>
-          <p class="price">small: $5.25 • regular: $7.25</p>
-          <button class="add-cart size-btn" data-id="item2" data-name="#2 Original Vanilla" data-size="small" data-price="5.25">Add small</button>
-          <button class="add-cart size-btn" data-id="item2" data-name="#2 Original Vanilla" data-size="regular" data-price="7.25">Add regular</button>
+        <article class="menu-card" data-id="item2" data-name="#2 Original Vanilla">
+          <div class="thumb" style="background-image:url('img/2.jpg')" aria-hidden="true"></div>
+          <div class="content">
+            <h3>#2 Original Vanilla — Fruity Pebbles</h3>
+            <p class="desc">Base: Original Vanilla. Mix: Fruity Pebbles. Toppings: Whip Cream, Sprinkles & Sour Punch.</p>
+            <div class="footer">
+              <div class="price">small: $5.25 • regular: $7.25</div>
+              <div class="sizes">
+                <button class="add-cart" data-id="item2" data-name="#2 Original Vanilla" data-size="small" data-price="5.25">Add small</button>
+                <button class="add-cart" data-id="item2" data-name="#2 Original Vanilla" data-size="regular" data-price="7.25">Add regular</button>
+              </div>
+            </div>
+          </div>
         </article>
 
-        <article class="menu-item" data-id="item3" data-name="#3 Thai Tea">
-          <h3>#3 Thai Tea — Peach</h3>
-          <p class="desc">Base: Thai Tea. Mix: Peach. Toppings: Graham Crackers, Raspberry & Pineapple.</p>
-          <p class="price">small: $5.25 • regular: $7.25</p>
-          <button class="add-cart size-btn" data-id="item3" data-name="#3 Thai Tea" data-size="small" data-price="5.25">Add small</button>
-          <button class="add-cart size-btn" data-id="item3" data-name="#3 Thai Tea" data-size="regular" data-price="7.25">Add regular</button>
+        <article class="menu-card" data-id="item3" data-name="#3 Thai Tea">
+          <div class="thumb" style="background-image:url('img/3.jpg')" aria-hidden="true"></div>
+          <div class="content">
+            <h3>#3 Thai Tea — Peach</h3>
+            <p class="desc">Base: Thai Tea. Mix: Peach. Toppings: Graham Crackers, Raspberry & Pineapple.</p>
+            <div class="footer">
+              <div class="price">small: $5.25 • regular: $7.25</div>
+              <div class="sizes">
+                <button class="add-cart" data-id="item3" data-name="#3 Thai Tea" data-size="small" data-price="5.25">Add small</button>
+                <button class="add-cart" data-id="item3" data-name="#3 Thai Tea" data-size="regular" data-price="7.25">Add regular</button>
+              </div>
+            </div>
+          </div>
         </article>
 
-        <article class="menu-item" data-id="item4" data-name="#4 Mango">
-          <h3>#4 Mango — Pineapple Mix</h3>
-          <p class="desc">Base: Mango. Mix: Pineapple. Toppings: Coconut, Pineapple & Cherry.</p>
-          <p class="price">small: $5.25 • regular: $7.25</p>
-          <button class="add-cart size-btn" data-id="item4" data-name="#4 Mango" data-size="small" data-price="5.25">Add small</button>
-          <button class="add-cart size-btn" data-id="item4" data-name="#4 Mango" data-size="regular" data-price="7.25">Add regular</button>
+        <article class="menu-card" data-id="item4" data-name="#4 Mango">
+          <div class="thumb" style="background-image:url('img/4.jpg')" aria-hidden="true"></div>
+          <div class="content">
+            <h3>#4 Mango — Pineapple Mix</h3>
+            <p class="desc">Base: Mango. Mix: Pineapple. Toppings: Coconut, Pineapple & Cherry.</p>
+            <div class="footer">
+              <div class="price">small: $5.25 • regular: $7.25</div>
+              <div class="sizes">
+                <button class="add-cart" data-id="item4" data-name="#4 Mango" data-size="small" data-price="5.25">Add small</button>
+                <button class="add-cart" data-id="item4" data-name="#4 Mango" data-size="regular" data-price="7.25">Add regular</button>
+              </div>
+            </div>
+          </div>
         </article>
 
-        <article class="menu-item" data-id="item5" data-name="#5 Original Vanilla">
-          <h3>#5 Original Vanilla — Graham Crackers & Strawberry Mix</h3>
-          <p class="desc">Base: Original Vanilla. Mix: Graham Crackers & Strawberry. Toppings: Graham Crackers & Strawberry.</p>
-          <p class="price">small: $5.25 • regular: $7.25</p>
-          <button class="add-cart size-btn" data-id="item5" data-name="#5 Original Vanilla" data-size="small" data-price="5.25">Add small</button>
-          <button class="add-cart size-btn" data-id="item5" data-name="#5 Original Vanilla" data-size="regular" data-price="7.25">Add regular</button>
+        <article class="menu-card" data-id="item5" data-name="#5 Original Vanilla">
+          <div class="thumb" style="background-image:url('img/5.jpg')" aria-hidden="true"></div>
+          <div class="content">
+            <h3>#5 Original Vanilla — Graham Crackers & Strawberry Mix</h3>
+            <p class="desc">Base: Original Vanilla. Mix: Graham Crackers & Strawberry. Toppings: Graham Crackers & Strawberry.</p>
+            <div class="footer">
+              <div class="price">small: $5.25 • regular: $7.25</div>
+              <div class="sizes">
+                <button class="add-cart" data-id="item5" data-name="#5 Original Vanilla" data-size="small" data-price="5.25">Add small</button>
+                <button class="add-cart" data-id="item5" data-name="#5 Original Vanilla" data-size="regular" data-price="7.25">Add regular</button>
+              </div>
+            </div>
+          </div>
         </article>
 
-        <article class="menu-item" data-id="item6" data-name="#6 Chocolate">
-          <h3>#6 Chocolate — Brownie & Oreo Mix</h3>
-          <p class="desc">Base: Chocolate. Mix: Brownie & Oreo. Toppings: Brownie, Oreo & Pocky.</p>
-          <p class="price">small: $5.25 • regular: $7.25</p>
-          <button class="add-cart size-btn" data-id="item6" data-name="#6 Chocolate" data-size="small" data-price="5.25">Add small</button>
-          <button class="add-cart size-btn" data-id="item6" data-name="#6 Chocolate" data-size="regular" data-price="7.25">Add regular</button>
+        <article class="menu-card" data-id="item6" data-name="#6 Chocolate">
+          <div class="thumb" style="background-image:url('img/6.jpg')" aria-hidden="true"></div>
+          <div class="content">
+            <h3>#6 Chocolate — Brownie & Oreo Mix</h3>
+            <p class="desc">Base: Chocolate. Mix: Brownie & Oreo. Toppings: Brownie, Oreo & Pocky.</p>
+            <div class="footer">
+              <div class="price">small: $5.25 • regular: $7.25</div>
+              <div class="sizes">
+                <button class="add-cart" data-id="item6" data-name="#6 Chocolate" data-size="small" data-price="5.25">Add small</button>
+                <button class="add-cart" data-id="item6" data-name="#6 Chocolate" data-size="regular" data-price="7.25">Add regular</button>
+              </div>
+            </div>
+          </div>
         </article>
 
-        <article class="menu-item" data-id="item7" data-name="#7 Original Vanilla">
-          <h3>#7 Original Vanilla — Triple Berry Mix</h3>
-          <p class="desc">Base: Original Vanilla. Mix: Raspberry, Blueberry & Blackberry. Toppings: Raspberry, Blueberry, Blackberry & Sugar Wafers.</p>
-          <p class="price">small: $5.25 • regular: $7.25</p>
-          <button class="add-cart size-btn" data-id="item7" data-name="#7 Original Vanilla" data-size="small" data-price="5.25">Add small</button>
-          <button class="add-cart size-btn" data-id="item7" data-name="#7 Original Vanilla" data-size="regular" data-price="7.25">Add regular</button>
+        <article class="menu-card" data-id="item7" data-name="#7 Original Vanilla">
+          <div class="thumb" style="background-image:url('img/7.jpg')" aria-hidden="true"></div>
+          <div class="content">
+            <h3>#7 Original Vanilla — Triple Berry Mix</h3>
+            <p class="desc">Base: Original Vanilla. Mix: Raspberry, Blueberry & Blackberry. Toppings: Raspberry, Blueberry, Blackberry & Sugar Wafers.</p>
+            <div class="footer">
+              <div class="price">small: $5.25 • regular: $7.25</div>
+              <div class="sizes">
+                <button class="add-cart" data-id="item7" data-name="#7 Original Vanilla" data-size="small" data-price="5.25">Add small</button>
+                <button class="add-cart" data-id="item7" data-name="#7 Original Vanilla" data-size="regular" data-price="7.25">Add regular</button>
+              </div>
+            </div>
+          </div>
         </article>
 
-        <article class="menu-item" data-id="item8" data-name="#8 Matcha">
-          <h3>#8 Matcha — Strawberry Mix</h3>
-          <p class="desc">Base: Matcha. Mix: Strawberry. Toppings: Strawberry, Strawberry Popping Boba, Strawberry Pocky & Longan.</p>
-          <p class="price">small: $5.25 • regular: $7.25</p>
-          <button class="add-cart size-btn" data-id="item8" data-name="#8 Matcha" data-size="small" data-price="5.25">Add small</button>
-          <button class="add-cart size-btn" data-id="item8" data-name="#8 Matcha" data-size="regular" data-price="7.25">Add regular</button>
+        <article class="menu-card" data-id="item8" data-name="#8 Matcha">
+          <div class="thumb" style="background-image:url('img/8.jpg')" aria-hidden="true"></div>
+          <div class="content">
+            <h3>#8 Matcha — Strawberry Mix</h3>
+            <p class="desc">Base: Matcha. Mix: Strawberry. Toppings: Strawberry, Strawberry Popping Boba, Strawberry Pocky & Longan.</p>
+            <div class="footer">
+              <div class="price">small: $5.25 • regular: $7.25</div>
+              <div class="sizes">
+                <button class="add-cart" data-id="item8" data-name="#8 Matcha" data-size="small" data-price="5.25">Add small</button>
+                <button class="add-cart" data-id="item8" data-name="#8 Matcha" data-size="regular" data-price="7.25">Add regular</button>
+              </div>
+            </div>
+          </div>
         </article>
 
-        <article class="menu-item" data-id="item9" data-name="#9 Original Vanilla">
-          <h3>#9 Original Vanilla — Graham & Oreo Mix</h3>
-          <p class="desc">Base: Original Vanilla. Mix: Graham Crackers & Oreo. Toppings: Toasted Marshmallow, Whip Cream, & Panda Cookies.</p>
-          <p class="price">small: $5.25 • regular: $7.25</p>
-          <button class="add-cart size-btn" data-id="item9" data-name="#9 Original Vanilla" data-size="small" data-price="5.25">Add small</button>
-          <button class="add-cart size-btn" data-id="item9" data-name="#9 Original Vanilla" data-size="regular" data-price="7.25">Add regular</button>
+        <article class="menu-card" data-id="item9" data-name="#9 Original Vanilla">
+          <div class="thumb" style="background-image:url('img/9.jpg')" aria-hidden="true"></div>
+          <div class="content">
+            <h3>#9 Original Vanilla — Graham & Oreo Mix</h3>
+            <p class="desc">Base: Original Vanilla. Mix: Graham Crackers & Oreo. Toppings: Toasted Marshmallow, Whip Cream, & Panda Cookies.</p>
+            <div class="footer">
+              <div class="price">small: $5.25 • regular: $7.25</div>
+              <div class="sizes">
+                <button class="add-cart" data-id="item9" data-name="#9 Original Vanilla" data-size="small" data-price="5.25">Add small</button>
+                <button class="add-cart" data-id="item9" data-name="#9 Original Vanilla" data-size="regular" data-price="7.25">Add regular</button>
+              </div>
+            </div>
+          </div>
         </article>
 
-        <article class="menu-item" data-id="item10" data-name="#10 Coffee">
-          <h3>#10 Coffee — Nutella Mix</h3>
-          <p class="desc">Base: Coffee. Mix: Nutella. Toppings: Pretzels, Caramel Sauce, Whip Cream & Chocolate Chips.</p>
-          <p class="price">small: $5.25 • regular: $7.25</p>
-          <button class="add-cart size-btn" data-id="item10" data-name="#10 Coffee" data-size="small" data-price="5.25">Add small</button>
-          <button class="add-cart size-btn" data-id="item10" data-name="#10 Coffee" data-size="regular" data-price="7.25">Add regular</button>
+        <article class="menu-card" data-id="item10" data-name="#10 Coffee">
+          <div class="thumb" style="background-image:url('img/10.jpg')" aria-hidden="true"></div>
+          <div class="content">
+            <h3>#10 Coffee — Nutella Mix</h3>
+            <p class="desc">Base: Coffee. Mix: Nutella. Toppings: Pretzels, Caramel Sauce, Whip Cream & Chocolate Chips.</p>
+            <div class="footer">
+              <div class="price">small: $5.25 • regular: $7.25</div>
+              <div class="sizes">
+                <button class="add-cart" data-id="item10" data-name="#10 Coffee" data-size="small" data-price="5.25">Add small</button>
+                <button class="add-cart" data-id="item10" data-name="#10 Coffee" data-size="regular" data-price="7.25">Add regular</button>
+              </div>
+            </div>
+          </div>
         </article>
 
       </section>
