--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <ul class="nav_links">
         <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <a class="signupbtn" href="signup.html">Sign up</a>
