--- a/about.html
+++ b/about.html
@@ -118,13 +118,12 @@
     }
 
     .story-image {
-      background: linear-gradient(135deg, #FFB5C5 0%, #85D4F5 100%); /* Gradient for visual placeholder */
       height: 400px;
       border-radius: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 8rem; /* Large emoji icon */
+      background-image: url('img/iceland.jpg');
+      background-size: contain;     
+      background-repeat: no-repeat;  
+      background-position: center;  
     }
 
     /* Responsive adjustments for smaller screens */
@@ -161,7 +160,7 @@
     <!-- Hero section -->
     <div class="about-hero">
       <h1>🍦 About Iceland Ice Cream</h1>
-      <p>Crafting happiness one scoop at a time since our beginning. We believe every day deserves a sweet treat!</p>
+      <p>Crafting happiness one roll at a time since our beginning. We believe every day deserves a sweet treat!</p>
     </div>
 
     <!-- Mission section -->
@@ -186,7 +185,7 @@
       <div class="feature-card">
         <div class="feature-icon">❤️</div>
         <h3>Made with Love</h3>
-        <p>Every scoop is crafted with care and passion by our dedicated team.</p>
+        <p>Every cup is crafted with care and passion by our dedicated team.</p>
       </div>
     </div>
 
@@ -195,11 +194,10 @@
       <div class="story-text">
         <h2>Our Story</h2>
         <p>Iceland Ice Cream was born from a simple dream: to create the most delicious and creative ice cream experiences. What started as a small passion project has grown into a beloved destination for ice cream lovers.</p>
-        <p>We take pride in our unique approach to ice cream making, combining traditional techniques with innovative flavor profiles. Each item on our menu is carefully designed to provide the perfect balance of taste, texture, and presentation.</p>
+        <p>We take pride in our unique approach to ice cream making, combining traditional techniques with innovative flavor profiles. Each item on our pre-made menu is carefully designed to provide the perfect balance of taste, texture, and presentation.</p>
         <p>Today, we continue to push the boundaries of what ice cream can be, always keeping our customers' smiles at the heart of everything we do.</p>
       </div>
-      <div class="story-image">
-        🍨 <!-- Placeholder image/emoji -->
+      <div class="story-image" style="background-image:url('img/iceland.jpg')">
       </div>
     </div>
 
