--- a/contact.html
+++ b/contact.html
@@ -251,30 +251,26 @@
         <!-- Location info -->
         <div class="info-card">
           <h3><span class="info-icon">📍</span> Location</h3>
-          <p>123 Sweet Street<br>Ice Cream City, IC 12345<br>United States</p>
+          <p>1201 W Arbrook Blvd STE 121<br>Arlington, TX 76015<br>United States</p>
         </div>
         <!-- Email & phone -->
         <div class="info-card">
           <h3><span class="info-icon">📧</span> Email & Phone</h3>
-          <p><strong>Email:</strong> hello@icelandicecream.com<br>
-          <strong>Phone:</strong> (555) 123-4567<br>
-          <strong>Catering:</strong> catering@icelandicecream.com</p>
+          <p><strong>Email:</strong> sofia@icelandicecream.com<br>
+          <strong>Phone:</strong> (682) 395-8587<br>
+          <strong>Catering:</strong> sofia@icelandicecream.com</p>
         </div>
         <!-- Opening hours -->
         <div class="info-card">
           <h3><span class="info-icon">🕒</span> Hours</h3>
           <div class="hours-grid">
             <div class="hours-item">
-              <span>Monday - Thursday</span>
-              <span>11am - 9pm</span>
+              <span>Sunday - Thursday</span>
+              <span>1pm - 10pm</span>
             </div>
             <div class="hours-item">
               <span>Friday - Saturday</span>
-              <span>11am - 10pm</span>
-            </div>
-            <div class="hours-item">
-              <span>Sunday</span>
-              <span>12pm - 8pm</span>
+              <span>1pm - 11pm</span>
             </div>
           </div>
         </div>
