--- a/menu.html
+++ b/menu.html
@@ -35,10 +35,14 @@
 
     <main style="padding: 2rem 9%;">
       <h1 style="color:#3b1c13; margin-bottom:1rem;">Our Menu</h1>
+      <div class="switch-bar">
+        <a class="switch-btn active" href="menu.html">Pre Made</a>
+        <a class="switch-btn" href="build.html">Build Your Own</a>
+      </div>
       <section class="menu-grid" id="menuGrid">
 
         <article class="menu-card" data-id="item1" data-name="#1 Original Vanilla">
-          <div class="thumb" style="background-image:url('img/1.jpg')" aria-hidden="true"></div>
+          <div class="thumb" style="background-image:url('img/num1.png')" aria-hidden="true"></div>
           <div class="content">
             <h3>#1 Original Vanilla — Banana & Nutella</h3>
             <p class="desc">Base: Original Vanilla. Mix: Banana and Nutella. Toppings: Fruit Loops, Banana & Strawberry.</p>
@@ -53,7 +57,7 @@
         </article>
 
         <article class="menu-card" data-id="item2" data-name="#2 Original Vanilla">
-          <div class="thumb" style="background-image:url('img/2.jpg')" aria-hidden="true"></div>
+          <div class="thumb" style="background-image:url('img/num2.png')" aria-hidden="true"></div>
           <div class="content">
             <h3>#2 Original Vanilla — Fruity Pebbles</h3>
             <p class="desc">Base: Original Vanilla. Mix: Fruity Pebbles. Toppings: Whip Cream, Sprinkles & Sour Punch.</p>
@@ -68,7 +72,7 @@
         </article>
 
         <article class="menu-card" data-id="item3" data-name="#3 Thai Tea">
-          <div class="thumb" style="background-image:url('img/3.jpg')" aria-hidden="true"></div>
+          <div class="thumb" style="background-image:url('img/num3.png')" aria-hidden="true"></div>
           <div class="content">
             <h3>#3 Thai Tea — Peach</h3>
             <p class="desc">Base: Thai Tea. Mix: Peach. Toppings: Graham Crackers, Raspberry & Pineapple.</p>
@@ -83,7 +87,7 @@
         </article>
 
         <article class="menu-card" data-id="item4" data-name="#4 Mango">
-          <div class="thumb" style="background-image:url('img/4.jpg')" aria-hidden="true"></div>
+          <div class="thumb" style="background-image:url('img/num4.png')" aria-hidden="true"></div>
           <div class="content">
             <h3>#4 Mango — Pineapple Mix</h3>
             <p class="desc">Base: Mango. Mix: Pineapple. Toppings: Coconut, Pineapple & Cherry.</p>
@@ -98,7 +102,7 @@
         </article>
 
         <article class="menu-card" data-id="item5" data-name="#5 Original Vanilla">
-          <div class="thumb" style="background-image:url('img/5.jpg')" aria-hidden="true"></div>
+          <div class="thumb" style="background-image:url('img/num5.png')" aria-hidden="true"></div>
           <div class="content">
             <h3>#5 Original Vanilla — Graham Crackers & Strawberry Mix</h3>
             <p class="desc">Base: Original Vanilla. Mix: Graham Crackers & Strawberry. Toppings: Graham Crackers & Strawberry.</p>
@@ -113,7 +117,7 @@
         </article>
 
         <article class="menu-card" data-id="item6" data-name="#6 Chocolate">
-          <div class="thumb" style="background-image:url('img/6.jpg')" aria-hidden="true"></div>
+          <div class="thumb" style="background-image:url('img/num6.png')" aria-hidden="true"></div>
           <div class="content">
             <h3>#6 Chocolate — Brownie & Oreo Mix</h3>
             <p class="desc">Base: Chocolate. Mix: Brownie & Oreo. Toppings: Brownie, Oreo & Pocky.</p>
@@ -128,7 +132,7 @@
         </article>
 
         <article class="menu-card" data-id="item7" data-name="#7 Original Vanilla">
-          <div class="thumb" style="background-image:url('img/7.jpg')" aria-hidden="true"></div>
+          <div class="thumb" style="background-image:url('img/num7.png')" aria-hidden="true"></div>
           <div class="content">
             <h3>#7 Original Vanilla — Triple Berry Mix</h3>
             <p class="desc">Base: Original Vanilla. Mix: Raspberry, Blueberry & Blackberry. Toppings: Raspberry, Blueberry, Blackberry & Sugar Wafers.</p>
@@ -143,7 +147,7 @@
         </article>
 
         <article class="menu-card" data-id="item8" data-name="#8 Matcha">
-          <div class="thumb" style="background-image:url('img/8.jpg')" aria-hidden="true"></div>
+          <div class="thumb" style="background-image:url('img/num8.png')" aria-hidden="true"></div>
           <div class="content">
             <h3>#8 Matcha — Strawberry Mix</h3>
             <p class="desc">Base: Matcha. Mix: Strawberry. Toppings: Strawberry, Strawberry Popping Boba, Strawberry Pocky & Longan.</p>
@@ -158,7 +162,7 @@
         </article>
 
         <article class="menu-card" data-id="item9" data-name="#9 Original Vanilla">
-          <div class="thumb" style="background-image:url('img/9.jpg')" aria-hidden="true"></div>
+          <div class="thumb" style="background-image:url('img/num9.png')" aria-hidden="true"></div>
           <div class="content">
             <h3>#9 Original Vanilla — Graham & Oreo Mix</h3>
             <p class="desc">Base: Original Vanilla. Mix: Graham Crackers & Oreo. Toppings: Toasted Marshmallow, Whip Cream, & Panda Cookies.</p>
@@ -173,7 +177,7 @@
         </article>
 
         <article class="menu-card" data-id="item10" data-name="#10 Coffee">
-          <div class="thumb" style="background-image:url('img/10.jpg')" aria-hidden="true"></div>
+          <div class="thumb" style="background-image:url('img/num10.png')" aria-hidden="true"></div>
           <div class="content">
             <h3>#10 Coffee — Nutella Mix</h3>
             <p class="desc">Base: Coffee. Mix: Nutella. Toppings: Pretzels, Caramel Sauce, Whip Cream & Chocolate Chips.</p>
