--- a/public/about.html
+++ b/public/about.html
@@ -120,7 +120,7 @@
     .story-image {
       height: 400px;
       border-radius: 20px;
-      background-image: url('img/iceland.jpg');
+      background-image: url('/img/iceland.jpg');
       background-size: contain;     
       background-repeat: no-repeat;  
       background-position: center;  
@@ -142,7 +142,7 @@
   <!-- Header with logo and navigation links -->
   <header>
     <a href="index.html" class="logo-link">
-      <img class="logo" src="./img/LOGO.png" alt="Logo">
+      <img class="logo" src="/img/LOGO.png" alt="Logo">
       <span>ICELAND ICE CREAM</span>
     </a>
     <nav>
@@ -199,7 +199,7 @@
         <p>We take pride in our unique approach to ice cream making, combining traditional techniques with innovative flavor profiles. Each item on our pre-made menu is carefully designed to provide the perfect balance of taste, texture, and presentation.</p>
         <p>Today, we continue to push the boundaries of what ice cream can be, always keeping our customers' smiles at the heart of everything we do.</p>
       </div>
-      <div class="story-image" style="background-image:url('img/iceland.jpg')">
+      <div class="story-image" style="background-image:url('/img/iceland.jpg')">
       </div>
     </div>
 
