--- a/public/build.html
+++ b/public/build.html
@@ -11,7 +11,7 @@
   <header>
     <!-- Logo and brand name linking back to homepage -->
     <a href="index.html" class="logo-link">
-      <img class="logo" src="./img/LOGO.png" alt="Logo">
+      <img class="logo" src="/img/LOGO.png" alt="Logo">
       <span>ICELAND ICE CREAM</span>
     </a>
     
