--- a/public/signup.html
+++ b/public/signup.html
@@ -19,7 +19,7 @@
        =========================== -->
   <header>
     <a href="index.html" class="logo-link">
-      <img class="logo" src="./img/LOGO.png" alt="Logo">
+      <img class="logo" src="/img/LOGO.png" alt="Logo">
     </a>
 
     <nav>
