--- a/public/success.html
+++ b/public/success.html
@@ -112,7 +112,7 @@
   <header>
     <!-- Logo and site name link to homepage -->
     <a href="index.html" class="logo-link">
-      <img class="logo" src="./img/LOGO.png" alt="Logo">
+      <img class="logo" src="/img/LOGO.png" alt="Logo">
       <span>ICELAND ICE CREAM</span>
     </a>
     <!-- Main navigation menu -->
