Fix image paths for menu & BYO (use relative img/ paths); ensure BYO images show

--- a/public/menu.html
+++ b/public/menu.html
@@ -72,7 +72,7 @@
 
       <!-- Menu Item #2: Original Vanilla with Fruity Pebbles -->
       <article class="menu-card" data-id="item2" data-name="#2 Original Vanilla">
-        <div class="thumb" style="background-image:url('/img/num2.png')" aria-hidden="true"></div>
+        <div class="thumb" style="background-image:url('img/num2.png')" aria-hidden="true"></div>
         <div class="content">
           <h3>#2 Original Vanilla — Fruity Pebbles</h3>
           <p class="desc">Base: Original Vanilla. Mix: Fruity Pebbles. Toppings: Whip Cream, Sprinkles & Sour Punch.</p>
@@ -91,7 +91,7 @@
 
       <!-- Menu Item #3: Thai Tea with Peach -->
       <article class="menu-card" data-id="item3" data-name="#3 Thai Tea">
-        <div class="thumb" style="background-image:url('/img/num3.png')" aria-hidden="true"></div>
+        <div class="thumb" style="background-image:url('img/num3.png')" aria-hidden="true"></div>
         <div class="content">
           <h3>#3 Thai Tea — Peach</h3>
           <p class="desc">Base: Thai Tea. Mix: Peach. Toppings: Graham Crackers, Raspberry & Pineapple.</p>
@@ -110,7 +110,7 @@
 
       <!-- Menu Item #4: Mango with Pineapple Mix -->
       <article class="menu-card" data-id="item4" data-name="#4 Mango">
-        <div class="thumb" style="background-image:url('/img/num4.png')" aria-hidden="true"></div>
+        <div class="thumb" style="background-image:url('img/num4.png')" aria-hidden="true"></div>
         <div class="content">
           <h3>#4 Mango — Pineapple Mix</h3>
           <p class="desc">Base: Mango. Mix: Pineapple. Toppings: Coconut, Pineapple & Cherry.</p>
@@ -129,7 +129,7 @@
 
       <!-- Menu Item #5: Original Vanilla with Graham Crackers & Strawberry -->
       <article class="menu-card" data-id="item5" data-name="#5 Original Vanilla">
-        <div class="thumb" style="background-image:url('/img/num5.png')" aria-hidden="true"></div>
+        <div class="thumb" style="background-image:url('img/num5.png')" aria-hidden="true"></div>
         <div class="content">
           <h3>#5 Original Vanilla — Graham Crackers & Strawberry Mix</h3>
           <p class="desc">Base: Original Vanilla. Mix: Graham Crackers & Strawberry. Toppings: Graham Crackers & Strawberry.</p>
@@ -148,7 +148,7 @@
 
       <!-- Menu Item #6: Chocolate with Brownie & Oreo Mix -->
       <article class="menu-card" data-id="item6" data-name="#6 Chocolate">
-        <div class="thumb" style="background-image:url('/img/num6.png')" aria-hidden="true"></div>
+        <div class="thumb" style="background-image:url('img/num6.png')" aria-hidden="true"></div>
         <div class="content">
           <h3>#6 Chocolate — Brownie & Oreo Mix</h3>
           <p class="desc">Base: Chocolate. Mix: Brownie & Oreo. Toppings: Brownie, Oreo & Pocky.</p>
@@ -167,7 +167,7 @@
 
       <!-- Menu Item #7: Original Vanilla with Triple Berry Mix -->
       <article class="menu-card" data-id="item7" data-name="#7 Original Vanilla">
-        <div class="thumb" style="background-image:url('/img/num7.png')" aria-hidden="true"></div>
+        <div class="thumb" style="background-image:url('img/num7.png')" aria-hidden="true"></div>
         <div class="content">
           <h3>#7 Original Vanilla — Triple Berry Mix</h3>
           <p class="desc">Base: Original Vanilla. Mix: Raspberry, Blueberry & Blackberry. Toppings: Raspberry, Blueberry, Blackberry & Sugar Wafers.</p>
@@ -186,7 +186,7 @@
 
       <!-- Menu Item #8: Matcha with Strawberry Mix -->
       <article class="menu-card" data-id="item8" data-name="#8 Matcha">
-        <div class="thumb" style="background-image:url('/img/num8.png')" aria-hidden="true"></div>
+        <div class="thumb" style="background-image:url('img/num8.png')" aria-hidden="true"></div>
         <div class="content">
           <h3>#8 Matcha — Strawberry Mix</h3>
           <p class="desc">Base: Matcha. Mix: Strawberry. Toppings: Strawberry, Strawberry Popping Boba, Strawberry Pocky & Longan.</p>
@@ -205,7 +205,7 @@
 
       <!-- Menu Item #9: Original Vanilla with Graham & Oreo Mix -->
       <article class="menu-card" data-id="item9" data-name="#9 Original Vanilla">
-        <div class="thumb" style="background-image:url('/img/num9.png')" aria-hidden="true"></div>
+        <div class="thumb" style="background-image:url('img/num9.png')" aria-hidden="true"></div>
         <div class="content">
           <h3>#9 Original Vanilla — Graham & Oreo Mix</h3>
           <p class="desc">Base: Original Vanilla. Mix: Graham Crackers & Oreo. Toppings: Toasted Marshmallow, Whip Cream, & Panda Cookies.</p>
@@ -224,7 +224,7 @@
 
       <!-- Menu Item #10: Coffee with Nutella Mix -->
       <article class="menu-card" data-id="item10" data-name="#10 Coffee">
-        <div class="thumb" style="background-image:url('/img/num10.png')" aria-hidden="true"></div>
+        <div class="thumb" style="background-image:url('img/num10.png')" aria-hidden="true"></div>
         <div class="content">
           <h3>#10 Coffee — Nutella Mix</h3>
           <p class="desc">Base: Coffee. Mix: Nutella. Toppings: Pretzels, Caramel Sauce, Whip Cream & Chocolate Chips.</p>
