--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <!-- Logo and brand name link - clicking returns user to home page -->
     <a href="index.html" class="logo-link">
-      <img class="logo" src="/img/LOGO.png" alt="Logo">
+      <img class="logo" src="./img/LOGO.png" alt="Logo">
       <span>ICELAND ICE CREAM</span>
     </a>
     
