--- a/contact.html
+++ b/contact.html
@@ -194,7 +194,7 @@
   <!-- Header with logo and navigation -->
   <header>
     <a href="index.html" class="logo-link">
-      <img class="logo" src="/img/LOGO.png" alt="Logo">
+      <img class="logo" src="./img/LOGO.png" alt="Logo">
       <span>ICELAND ICE CREAM</span>
     </a>
     <nav>
